2005-01-10  Not Zed  <NotZed@Ximian.com>

	* mail/mail-stub.c (mail_stub_read_args): long/int ->uint32.
	(mail_stub_return_data): "

	* camel/camel-stub.c (stub_send_internal): uint32 should be a
	uint32, not a long.
	(stub_send_internal): same for uint32array and int

2004-12-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_add_object):
	The cache now checks for duplicate detatched instances before adding 
	them. This fixes #70414
	(discard_detached_instance): Small leak fixed.

2004-12-09  Sushma Rai <rsushma@novell.com>

	* storage/main.c (main): Calling camel_init with the
	camel_cert.db file path.  Fixes #66932

2004-12-06  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated the version number to 2.0.3
	* NEWS : Updated
	Also updated the po files.

2004-11-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	 * storage/exchange-account.c (exchange_account_connect)(exchange_account_new)
        : Check if the user has provided a domain as part of the username field and
        store it for connecting to the server using form-based-authentication
        (finalize) : Cleanup the private member.

2004-11-05  Sushma Rai  <rsushma@novell.com>

	* lib/e2k-user-dialog.c (addressbook_clicked_cb): Setting
	the window non-modal, so that the user selection dialog
	gets the focus. Fixes #65047

2004-10-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel/camel-exchange-provider.c: (camel_provider_module_init):
	Initialize codeset here too.

2004-10-12  Sarfraaz Ahmed <asarfraaz@novell.com>

	* NEWS : Updated
	Created a new release for 2.0.2 and tagged after taking in
	Frederic's patch for codeset initialization.

2004-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/main.c: (main):
	* storage/ximian-connector-setup.c: (main):
	Initialize codeset for textdomain. Patch by Frederic Crozat.

2004-10-11  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Updated version to 2.0.2
	* NEWS : Updates
